# Mandelbrot_CUDA

./: CMakeLists.txt  README.md
include/: mandelbrot_cpu.hpp  utils.hpp
src/: main.cu  mandelbrot_cpu.cpp  mandelbrot_kernel.cu  mandelbrot_kernel.cuh  utils.cpp
